tests/bad/expr-statements/match_missing_yield.ae
/// fail: Must yield a value in this branch

def main() {
    let x = match 5 {
        0 => let y = "hello"
        else => let z = "bye"
    }
}